cmake_minimum_required(VERSION 3.8)
project(CppImpl)

set(CMAKE_CXX_STANDARD 11)

add_executable(hello hello.cpp)
set_target_properties(hello PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
add_executable(namespace grammer/namespace.cpp)
set_target_properties(namespace PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/grammer/")
add_executable(math math.cpp)
set_target_properties(math PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
add_executable(struct types/struct.cpp)
set_target_properties(struct PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/types/")
add_executable(tem tem.cpp)
set_target_properties(tem PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
add_executable(char types/char.cpp)
set_target_properties(char PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/types/")
add_executable(bool types/bool.cpp)
set_target_properties(bool PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/types/")
add_executable(auto types/auto.cpp)
set_target_properties(auto PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/types/")
add_executable(ref types/ref.cpp)
set_target_properties(ref PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/types/")

add_executable(memery grammer/memery.cpp)
set_target_properties(memery PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/grammer/")
add_executable(inline function/inline.cpp)
set_target_properties(inline PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/function/")
add_executable(Person oop/Person.cpp)
set_target_properties(Person PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/oop/")
add_executable(overload function/overload.cpp)
set_target_properties(overload PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/function/")
add_executable(Construct oop/Construct.cpp)
set_target_properties(Construct PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/oop/")
add_executable(copy oop/copy.cpp)
set_target_properties(copy PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/oop/")